--- a/Session11/LABS/spongebob-meme-generator.ipynb
+++ b/Session11/LABS/spongebob-meme-generator.ipynb
@@ -5,7 +5,7 @@
    "id": "193c7ccd",
    "metadata": {},
    "source": [
-    "#  NLP Week 2 Bonus Exercise: Spongebob Meme Generator"
+    "# Bonus Exercise: Spongebob Meme Generator"
    ]
   },
   {
